[gd_scene load_steps=2 format=2]

[ext_resource path="res://Systems/PauseSystem/Pause.gd" type="Script" id=1]

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.443137 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -55.0
margin_right = 64.0
margin_bottom = 55.0
rect_min_size = Vector2( 128, 64 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
margin_right = 128.0
margin_bottom = 14.0
text = "Paused"
align = 1

[node name="ResumeButton" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 18.0
margin_right = 128.0
margin_bottom = 38.0
text = "Resume"

[node name="MainMenuButton" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 42.0
margin_right = 128.0
margin_bottom = 62.0
text = "Main Menu"

[node name="SaveButton" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 66.0
margin_right = 128.0
margin_bottom = 86.0
text = "Save"

[node name="LoadButton" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 90.0
margin_right = 128.0
margin_bottom = 110.0
text = "Load"

[node name="QuitButton" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 114.0
margin_right = 128.0
margin_bottom = 134.0
text = "Quit"
[connection signal="pressed" from="ColorRect/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
